document for reset password APIs
